trunk/test/fail/ac/ruleboolexp.app
//Error: rule should contain a Bool expression:
application test

access control rules

  rule page name()
  {
    1+1
  }